# mongodb_connectorpkg

./: README.md  pyproject.toml  requirement_dev.text  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  template.py  tox.ini
.github/workflows/: ci.yaml
experiment/: experiment.ipynb
src/database_automation/: mongo_crud.py
src/databaseautomation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/mongodb_connection/: mongo_crud.py
src/mymongoo_automate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
